update styles for youth page. fix white space etc...

--- a/static/styles.css
+++ b/static/styles.css
@@ -209,6 +209,7 @@ audio::-webkit-media-controls-panel {
   /* width: 100%; */
   margin: auto;
   max-height: 5in;
+  cursor: pointer;
   /* max-height: 5in; */
 }
 
@@ -826,6 +827,17 @@ a:hover {
   .slide-slide {
     margin: auto;
   }
+
+  #youthSlideshow img {
+    width: 300px !important;
+    height: 260px !important;
+    margin: auto;
+  }
+
+  #youthSlideshow {
+    max-height: 3in !important;
+    cursor: pointer;
+  }
 }
 
 @media screen and (max-width: 400px) {
@@ -833,18 +845,17 @@ a:hover {
     width: 0;
   }
 
-  #familySlideshow, #youthSlideshow {
-    padding: 0 15px;
-  }
+  /*#familySlideshow, #youthSlideshow {*/
+    /*padding: 0 15px;*/
+    /*max-height: 3in;*/
+    /*cursor: pointer !important;*/
+  /*}*/
 
-  #familySlideshow img, #youthSlideshow img {
-    width: 100vw !important;
-    margin: auto;
-  }
+  /*#familySlideshow img, */
 
-  #familySlideshow img {
-    height: 50vh;
-  }
+  /*#familySlideshow img {*/
+    /*height: 330px !important;*/
+  /*}*/
 }
 
 .swipe-area {
